# conan-jpeg

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py
test_package/: CMakeLists.txt  conanfile.py  testpkg.c
